tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__number-5.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"-5\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Number(
                    -5.0,
                ),
            ),
        ),
    ],
)
