tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__or-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"false or false or true\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Or(
                    Or(
                        Boolean(
                            False,
                        ),
                        (),
                        Boolean(
                            False,
                        ),
                    ),
                    (),
                    Boolean(
                        True,
                    ),
                ),
            ),
        ),
    ],
)
