tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__or.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"false or false\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Or(
                    Boolean(
                        False,
                    ),
                    (),
                    Boolean(
                        False,
                    ),
                ),
            ),
        ),
    ],
)
