tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__range-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1..=2\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Range(
                    Number(
                        1.0,
                    ),
                    (),
                    Some(
                        (),
                    ),
                    Number(
                        2.0,
                    ),
                ),
            ),
        ),
    ],
)
