tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__range-3.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1..2..3\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Range(
                    Range(
                        Number(
                            1.0,
                        ),
                        (),
                        None,
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    None,
                    Number(
                        3.0,
                    ),
                ),
            ),
        ),
    ],
)
