tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__ternary-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"true ? 1 + 2 : 2 + 1\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Ternary(
                    Boolean(
                        True,
                    ),
                    (),
                    Add(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    Add(
                        Number(
                            2.0,
                        ),
                        (),
                        Number(
                            1.0,
                        ),
                    ),
                ),
            ),
        ),
    ],
)
