tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__ternary.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"true ? 1 : 2\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Ternary(
                    Boolean(
                        True,
                    ),
                    (),
                    Number(
                        1.0,
                    ),
                    (),
                    Number(
                        2.0,
                    ),
                ),
            ),
        ),
    ],
)
